--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "archiver": "^2.1.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -14,6 +15,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "multiparty": "^4.1.3",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "serve-index": "^1.9.1",
+    "unzip": "^0.1.11"
   }
 }
